--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -5,6 +5,14 @@ h1{
   color: red;
 }
 
+/*section {
+  background: #5998ff;
+  border-style: solid;
+  border-width: 5px;
+  margin: 5px 5px 5px 5px;
+  padding: 5px 5px 5px 5px;
+}
+
 #index-title {
   text-align: center;
   font-size: 15px;
@@ -16,12 +24,16 @@ h1{
   margin: 5px;
   padding: 5px;
   height: 200px;
-}
+}*/
 
-section {
-  background: #5998ff;
-  border-style: solid;
-  border-width: 5px;
-  margin: 5px 5px 5px 5px;
-  padding: 5px 5px 5px 5px;
-}
+.social-btn {
+/*    position: relative;*/
+    background: #428BCA;
+    color: #fff;
+    /*height: 75px;
+    width: 120px;*/
+    text-align: center;
+    border-radius: 5px;
+    padding: 8px 8px 8px 8px;
+    /*margin: 10px 10px 10px 10px;*/
+  }
