--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,3 @@
 <h1>About Bloccit</h1>
 <p>Created by: Iggy</p>
+<%= link_to "Follow Ig!", "https://www.instagram.com/stupendous_igg/", class: "social-btn" %>
