--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,10 @@
 <h1>All Posts</h1>
 
-<% @posts.each_with_index do |post, index| %>
+<% @posts.each do |post|  %>
   <div class="media">
     <div class="media-body">
       <h4 class="media-heading">
-        <% if (index + 1) % 5 == 0 %>
-        <%= link_to post.title = "SPAM" %>
-        <% else %>
         <%= link_to post.title, post %>
-        <% end %>
       </h4>
     </div>
   </div>
