--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,12 @@
- <h1><%= @posts.title %></h1>
+ <h1><%= @post.title %></h1>
 
  <div class="row">
    <div class="col-md-8">
-     <p><%= @posts.body %></p>
+     <p><%= @post.body %></p>
    </div>
    <div class="col-md-4">
-     <%= link_to "Edit", edit_post_path(@posts), class: 'btn btn-success'%>
-     <%= link_to "Delete Post", @posts, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete such post?'}%>
-     
+
+        <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
+        <%= link_to "Delete Post NOW!",[@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: "You sure you want to delete such magnificent post?"} %>
    </div>
  </div>
