--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -16,6 +16,11 @@
         <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title!"%>
       </div>
       <div class="form-group">
+         <%= f.label :body %>
+         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter da post body!" %>
+       </div>
+
+      <div class="form-group">
         <%= f.submit "Save", class: 'btn btnsuccess' %>
       </div>
     <% end %>
