--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,9 +12,7 @@
    <div class="col-md-8">
      <%= form_for [@topic, @post] do |f| %>
        <div class="form-group">
-
          <%= f.label :title %>
-
          <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
        </div>
        <div class="form-group">
@@ -22,8 +20,8 @@
          <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
        </div>
        <div class="form-group">
-
          <%= f.submit "Save", class: 'btn btn-success' %>
+         <%= link_to "Back to Topics", topic_path(@topic), class: "btn btn-success" %>
        </div>
      <% end %>
    </div>
