--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,5 +8,6 @@
 
         <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
         <%= link_to "Delete Post NOW!",[@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: "You sure you want to delete such magnificent post?"} %>
+        <%= link_to "Back to previous Topic", @post.topic, class: 'btn btn-success' %>
    </div>
  </div>
