--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,9 +8,12 @@
    <div class="col-md-8">
      <p><%= @post.body %></p>
    </div>
+   <% if user_is_authorized_for_posts?(@post) %>
    <div class="col-md-4">
 
         <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
         <%= link_to "Delete Post NOW!",[@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: "You sure you want to delete such magnificent post?"} %>
+
    </div>
+   <% end %>
  </div>
