--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -6,14 +6,18 @@
 
 <div class="row">
   <div class="col-md-8">
-
-
     <p class="lead">
       <%= render partial: "labels/list", locals: { labels: @topic.labels } %>
       <br />
       <%= @topic.description %>
     </p>
-
+    <div>
+      <h3>Comments</h3>
+      <%= render @topic.comments %>
+    </div>
+    <div>
+      <%= render partial: 'comments/form', locals: {comment: Comment.new, location: @topic}  %>
+    </div>
 
     <% @topic.posts.each do |post| %>
       <div class="media">
@@ -22,7 +26,7 @@
             <%= link_to post.title, topic_post_path(@topic, post) %>
 
             <%= render partial: "labels/list", locals: { labels: post.labels } %>
-            
+
           </h4>
           <small>
             submitted <%= time_ago_in_words(post.created_at) %> ago by <%=post.user.name%> <br>
