--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,11 @@
- <h1>
-   <%= @post.title %><br>
-      <small>
-        submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
-</h1>
+<div>
+  <%= render partial: 'votes/voter', locals: {post: @post} %>
+   <h1>
+     <%= @post.title %><br>
+        <small>
+          submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
+  </h1>
+</div>
 
 <div class="row">
   <div class="col-md-8">
@@ -28,7 +31,20 @@
 
         <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
         <%= link_to "Delete Post NOW!",[@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: "You sure you want to delete such magnificent post?"} %>
-
+        <%= link_to "Back", @post.topic, class: 'btn btn-success' %>
    </div>
    <% end %>
+<% if current_user%>
+     <div class="col-md-4">
+     <h3>
+       <%= pluralize(@post.points, 'point') %>
+       <div>
+         <small>
+           <%= pluralize(@post.up_votes, 'up vote') %>,
+           <%= pluralize(@post.down_votes, 'down vote') %>
+         </small>
+       </div>
+     </h3>
+   </div>
+<% end %>
  </div>
