--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
       </div>
     </ul>
-
+    <div class="flash">
      <% if flash[:notice] %>
        <div class="alert alert-success">
          <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -48,7 +48,7 @@
        </div>
 
      <% end %>
-
+   </div>
 
   <%= yield %>
 </div>
